message_center: Remove inline reply on change

Notification inline reply did not support notification update after its
creation properly.

TEST=NotificationViewMD.TestInlineReplyRemovedByUpdate
BUG=894638

Change-Id: Ib03b92ea580fa45d5c4fc58de0bca2a1c7399e50
Reviewed-on: https://chromium-review.googlesource.com/c/1290234
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601840}
Former-commit-id: 18ca34c6f0414c26b5626f7b7f743950e91d120c